@@ -47,6 +47,9 @@ clients to retain sorted order.  Use json.nl=map explicitly in clients
 to get the old behavior, or add it as a default to the request handler
 in solrconfig.xml
 
+The Lucene based Solr query syntax is slightly more strict.
+A ':' in a field value must be escaped or the whole value must be quoted.
+
 
 Detailed Change List
 --------------------
@@ -321,6 +324,8 @@ Bug Fixes
 
 Other Changes
  1. Updated to Lucene 2.1
+
+ 2. Updated to Lucene 2007-05-20_00-04-53
 
 ================== Release 1.1.0, 20061222 ==================
 
